refactor allergy check methods for safety and readability